--- a/spotlight.html
+++ b/spotlight.html
@@ -115,6 +115,12 @@
             <p>Delhi’s Smog: Cycling through visible and invisible impacts</p>
             <a href="delhi’s-smog-cycling-through-visible-and-invisible-impacts.html" class="read-more">Read More</a>
         </article>
+          </article>
+        <article class="blog-post">
+            <img src="11.jpg" alt="Blog Image">
+            <p>Winter cycling tips for a safe and comfortable ride</p>
+            <a href="winter-cycling-tips-for-a-safe-and-comfortable-ride.html" class="read-more">Read More</a>
+        </article>
     <!-- PAGINATION -->
     <!-- <div class="pagination">
         <a href="#" class="prev">« Prev</a>
