--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <!-- Top Navigation Bar for Desktop -->
     <div class="desktop-nav">
         <div class="nav-links">
-            <a href="index.html">HOME</a>
-            <a href="experience.html">EXPERIENCE</a>
-            <a href="product.html">PRODUCT</a>
-            <a href="spotlight.html">SPOTLIGHT</a>
-            <a href="community.html">CLUB</a>
-            <a href="contact.html">CONTACT</a>
+            <a href="./">HOME</a>
+            <a href="./experience">EXPERIENCE</a>
+            <a href="./product">PRODUCT</a>
+            <a href="./spotlight">SPOTLIGHT</a>
+            <a href="./community">CLUB</a>
+            <a href="./contact">CONTACT</a>
 
         </div>
     </div>
