--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     <button class="sidebar-toggle">☰</button>
     <div class="sidebar">
         <div class="sidebar-content">
-            <div class="sidebar-item"><a href="index.html">HOME</a></div>
-            <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
-            <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
-            <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
-            <div class="sidebar-item"><a href="community.html">CLUB</a></div>
-            <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+            <div class="sidebar-item"><a href="./">HOME</a></div>
+            <div class="sidebar-item"><a href="./experience">EXPERIENCE</a></div>
+            <div class="sidebar-item"><a href="./product">PRODUCT</a></div>
+            <div class="sidebar-item"><a href="./spotlight">SPOTLIGHT</a></div>
+            <div class="sidebar-item"><a href="./community">CLUB</a></div>
+            <div class="sidebar-item"><a href="./contact">CONTACT</a></div>
 
         </div>
     </div>
