--- a/contact.html
+++ b/contact.html
@@ -52,14 +52,14 @@
 </div>
 
     <!-- Top Navigation Bar for Desktop -->
-    <div class="desktop-nav">
+   <div class="desktop-nav">
         <div class="nav-links">
-            <a href="index.html">HOME</a>
-            <a href="experience.html">EXPERIENCE</a>
-            <a href="product.html">PRODUCT</a>
-            <a href="spotlight.html">SPOTLIGHT</a>
-            <a href="community.html">CLUB</a>
-            <a href="contact.html">CONTACT</a>
+            <a href="./">HOME</a>
+            <a href="./experience">EXPERIENCE</a>
+            <a href="./product">PRODUCT</a>
+            <a href="./spotlight">SPOTLIGHT</a>
+            <a href="./community">CLUB</a>
+            <a href="./contact">CONTACT</a>
 
         </div>
     </div>
@@ -68,16 +68,15 @@
     <button class="sidebar-toggle">☰</button>
     <div class="sidebar">
         <div class="sidebar-content">
-            <div class="sidebar-item"><a href="index.html">HOME</a></div>
-            <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
-            <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
-            <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
-            <div class="sidebar-item"><a href="community.html">CLUB</a></div>
-            <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+            <div class="sidebar-item"><a href="./">HOME</a></div>
+            <div class="sidebar-item"><a href="./experience">EXPERIENCE</a></div>
+            <div class="sidebar-item"><a href="./product">PRODUCT</a></div>
+            <div class="sidebar-item"><a href="./spotlight">SPOTLIGHT</a></div>
+            <div class="sidebar-item"><a href="./community">CLUB</a></div>
+            <div class="sidebar-item"><a href="./contact">CONTACT</a></div>
 
         </div>
     </div>
-
     
 <script src="script.js"></script> <!-- Link to your JavaScript file -->
 
