--- a/experience.html
+++ b/experience.html
@@ -29,14 +29,14 @@
 
 
     <!-- Top Navigation Bar for Desktop -->
-    <div class="desktop-nav">
+   <div class="desktop-nav">
         <div class="nav-links">
-            <a href="index.html">HOME</a>
-            <a href="experience.html">EXPERIENCE</a>
-            <a href="product.html">PRODUCT</a>
-            <a href="spotlight.html">SPOTLIGHT</a>
-            <a href="community.html">CLUB</a>
-            <a href="contact.html">CONTACT</a>
+            <a href="./">HOME</a>
+            <a href="./experience">EXPERIENCE</a>
+            <a href="./product">PRODUCT</a>
+            <a href="./spotlight">SPOTLIGHT</a>
+            <a href="./community">CLUB</a>
+            <a href="./contact">CONTACT</a>
 
         </div>
     </div>
@@ -45,12 +45,12 @@
     <button class="sidebar-toggle">☰</button>
     <div class="sidebar">
         <div class="sidebar-content">
-            <div class="sidebar-item"><a href="index.html">HOME</a></div>
-            <div class="sidebar-item"><a href="experience.html">EXPERIENCE</a></div>
-            <div class="sidebar-item"><a href="product.html">PRODUCT</a></div>
-            <div class="sidebar-item"><a href="spotlight.html">SPOTLIGHT</a></div>
-            <div class="sidebar-item"><a href="community.html">CLUB</a></div>
-            <div class="sidebar-item"><a href="contact.html">CONTACT</a></div>
+            <div class="sidebar-item"><a href="./">HOME</a></div>
+            <div class="sidebar-item"><a href="./experience">EXPERIENCE</a></div>
+            <div class="sidebar-item"><a href="./product">PRODUCT</a></div>
+            <div class="sidebar-item"><a href="./spotlight">SPOTLIGHT</a></div>
+            <div class="sidebar-item"><a href="./community">CLUB</a></div>
+            <div class="sidebar-item"><a href="./contact">CONTACT</a></div>
 
         </div>
     </div>
