--- a/spotlight.html
+++ b/spotlight.html
@@ -61,7 +61,7 @@
         <article class="blog-post">
             <img src="01.jpg" alt="Blog Image">
             <p>Cycle Culture in India – From inception to present day scenario</p>
-            <a href="cycle-culture-in-india-from-inception-to-present-day-scenarios.html" class="read-more">Read More</a>
+            <a href="./cycle-culture-in-india-from-inception-to-present-day-scenarios" class="read-more">Read More</a>
         </article>
 
         <article class="blog-post">
