--- a/spotlight.html
+++ b/spotlight.html
@@ -120,6 +120,11 @@
             <p>Winter cycling tips for a safe and comfortable ride</p>
             <a href="winter-cycling-tips-for-a-safe-and-comfortable-ride.html" class="read-more">Read More</a>
         </article>
+         <article class="blog-post">
+            <img src="12.jpg" alt="Blog Image">
+            <p>Can cycling save the world?</p>
+            <a href="can-cycling-save-the-world.html" class="read-more">Read More</a>
+        </article>
     <!-- PAGINATION -->
     <!-- <div class="pagination">
         <a href="#" class="prev">« Prev</a>
