--- a/spotlight.html
+++ b/spotlight.html
@@ -125,6 +125,12 @@
             <p>Can cycling save the world?</p>
             <a href="can-cycling-save-the-world.html" class="read-more">Read More</a>
         </article>
+         <article class="blog-post">
+            <img src="12.jpg" alt="Blog Image">
+            <p>Why cycling is the answer to modern complexities</p>
+            <a href="why-cycling-is-the-answer-to-modern-complexities.html" class="read-more">Read More</a>
+        </article>
+
     <!-- PAGINATION -->
     <!-- <div class="pagination">
         <a href="#" class="prev">« Prev</a>
