--- a/spotlight.html
+++ b/spotlight.html
@@ -130,6 +130,11 @@
             <p>Why cycling is the answer to modern complexities</p>
             <a href="why-cycling-is-the-answer-to-modern-complexities.html" class="read-more">Read More</a>
         </article>
+          <article class="blog-post">
+            <img src="13.jpg" alt="Blog Image">
+            <p>The need for a National Cycling Policy in India</p>
+            <a href="the-need-for-a-National-Cycling-Policy-in-India.html" class="read-more">Read More</a>
+        </article>
 
     <!-- PAGINATION -->
     <!-- <div class="pagination">
