--- a/spotlight.html
+++ b/spotlight.html
@@ -135,6 +135,12 @@
             <p>The need for a National Cycling Policy in India</p>
             <a href="the-need-for-a-National-Cycling-Policy-in-India.html" class="read-more">Read More</a>
         </article>
+         </article>
+          <article class="blog-post">
+            <img src="15.jpg" alt="Blog Image">
+            <p>Cycling to work in India through the lens of society</p>
+            <a href="cycling-to-work-in-India-through-the-lens-of-society.html" class="read-more">Read More</a>
+        </article>
 
     <!-- PAGINATION -->
     <!-- <div class="pagination">
