--- a/spotlight.html
+++ b/spotlight.html
@@ -67,13 +67,13 @@
         <article class="blog-post">
             <img src="02.jpg" alt="Blog Image">
             <p>Is 10km cycling every day the Golden Distance?</p>
-            <a href="is-10km-cycling-every-day-the-golden-distance.html" class="read-more">Read More</a>
+            <a href="./is-10km-cycling-every-day-the-golden-distance" class="read-more">Read More</a>
         </article>
 
         <article class="blog-post">
             <img src="03.jpg" alt="Weekend cycing in india">
             <p>The rise of weekend cycling in India: More than just a trend</p>
-            <a href="The-rise-of-weekend-cycling-in-India-more-than-just-a-trend.html" class="read-more">Read More</a>
+            <a href="./the-rise-of-weekend-cycling-in-India-more-than-just-a-trend" class="read-more">Read More</a>
         </article>
 
         <article class="blog-post">
