--- a/spotlight.html
+++ b/spotlight.html
@@ -79,67 +79,67 @@
         <article class="blog-post">
             <img src="04.jpg" alt="Blog Image">
             <p>5 epic cycling destinations in India for November adventures</p>
-            <a href="5-epic-cycling-destinations-in-India-for-November-adventures.html" class="read-more">Read More</a>
+            <a href="./5-epic-cycling-destinations-in-India-for-November-adventures" class="read-more">Read More</a>
         </article>
 
         <article class="blog-post">
             <img src="05.jpg" alt="Blog Image">
             <p>Reasons to choose an Electric Cycle!</p>
-            <a href="reasons-to-choose-an-electric-cycle.html" class="read-more">Read More</a>
+            <a href="./reasons-to-choose-an-electric-cycle" class="read-more">Read More</a>
         </article>
         <article class="blog-post">
             <img src="06.jpg" alt="Blog Image">
             <p>Explore the best types of Electric Cycles available in India today</p>
-            <a href="explore-the-best-types-of-electric-cycles-available-in-India-today.html" class="read-more">Read More</a>
+            <a href="./explore-the-best-types-of-electric-cycles-available-in-India-today" class="read-more">Read More</a>
         </article>
          <article class="blog-post">
             <img src="07.jpg" alt="Blog Image">
             <p>Choosing the perfect electric cycle</p>
-            <a href="choosing-the-perfect-electric-cycle.html" class="read-more">Read More</a>
+            <a href="./choosing-the-perfect-electric-cycle" class="read-more">Read More</a>
         </article>
           <article class="blog-post">
             <img src="08.jpg" alt="Blog Image">
             <p>How dedicated cycling lanes could change the game</p>
-            <a href="how-dedicated-cycling-lanes-could-change-the-game.html" class="read-more">Read More</a>
+            <a href="./how-dedicated-cycling-lanes-could-change-the-game" class="read-more">Read More</a>
         </article>
         </article>
           <article class="blog-post">
             <img src="09.jpg" alt="Blog Image">
             <p>Electric cycles in India: Price range guide</p>
-            <a href="electric-cycles-in-india-price-range-guide.html" class="read-more">Read More</a>
+            <a href="./electric-cycles-in-india-price-range-guide" class="read-more">Read More</a>
         </article>
         </article>
           <article class="blog-post">
             <img src="10.jpg" alt="Blog Image">
             <p>Delhi’s Smog: Cycling through visible and invisible impacts</p>
-            <a href="delhi’s-smog-cycling-through-visible-and-invisible-impacts.html" class="read-more">Read More</a>
+            <a href="./delhi’s-smog-cycling-through-visible-and-invisible-impacts" class="read-more">Read More</a>
         </article>
           </article>
         <article class="blog-post">
             <img src="11.jpg" alt="Blog Image">
             <p>Winter cycling tips for a safe and comfortable ride</p>
-            <a href="winter-cycling-tips-for-a-safe-and-comfortable-ride.html" class="read-more">Read More</a>
+            <a href="./winter-cycling-tips-for-a-safe-and-comfortable-ride" class="read-more">Read More</a>
         </article>
          <article class="blog-post">
             <img src="12.jpg" alt="Blog Image">
             <p>Can cycling save the world?</p>
-            <a href="can-cycling-save-the-world.html" class="read-more">Read More</a>
+            <a href="./can-cycling-save-the-world" class="read-more">Read More</a>
         </article>
          <article class="blog-post">
             <img src="13.jpg" alt="Blog Image">
             <p>Why cycling is the answer to modern complexities</p>
-            <a href="why-cycling-is-the-answer-to-modern-complexities.html" class="read-more">Read More</a>
+            <a href="./why-cycling-is-the-answer-to-modern-complexities" class="read-more">Read More</a>
         </article>
           <article class="blog-post">
             <img src="14.jpg" alt="Blog Image">
             <p>The need for a National Cycling Policy in India</p>
-            <a href="the-need-for-a-National-Cycling-Policy-in-India.html" class="read-more">Read More</a>
+            <a href="./the-need-for-a-National-Cycling-Policy-in-India" class="read-more">Read More</a>
         </article>
          </article>
           <article class="blog-post">
             <img src="15.jpg" alt="Blog Image">
             <p>Cycling to work in India through the lens of society</p>
-            <a href="cycling-to-work-in-India-through-the-lens-of-society.html" class="read-more">Read More</a>
+            <a href="./cycling-to-work-in-India-through-the-lens-of-society" class="read-more">Read More</a>
         </article>
 
     <!-- PAGINATION -->
