--- a/spotlight.html
+++ b/spotlight.html
@@ -141,7 +141,12 @@
             <p>Cycling to work in India through the lens of society</p>
             <a href="./cycling-to-work-in-India-through-the-lens-of-society" class="read-more">Read More</a>
         </article>
-
+    </article>
+          <article class="blog-post">
+            <img src="16.jpg" alt="Blog Image">
+            <p>Bharat Mobility Expo 2025: Riding Into India’s Electric Future</p>
+            <a href="./bharat-mobility-expo-2025-riding-into-India’s-electric-future" class="read-more">Read More</a>
+        </article>
     <!-- PAGINATION -->
     <!-- <div class="pagination">
         <a href="#" class="prev">« Prev</a>
