--- a/spotlight.html
+++ b/spotlight.html
@@ -112,7 +112,7 @@
           <article class="blog-post">
             <img src="10.jpg" alt="Blog Image">
             <p>Delhi’s Smog: Cycling through visible and invisible impacts</p>
-            <a href="./delhi’s-smog-cycling-through-visible-and-invisible-impacts" class="read-more">Read More</a>
+            <a href="./delhis-smog-cycling-through-visible-and-invisible-impacts" class="read-more">Read More</a>
         </article>
           </article>
         <article class="blog-post">
