--- a/spotlight.html
+++ b/spotlight.html
@@ -147,6 +147,12 @@
             <p>Bharat Mobility Expo 2025: Riding Into India’s Electric Future</p>
             <a href="./bharat-mobility-expo-2025-riding-into-India’s-electric-future" class="read-more">Read More</a>
         </article>
+        </article>
+          <article class="blog-post">
+            <img src="17.jpg" alt="Blog Image">
+            <p>A Complete Guide to Cycling in India</p>
+            <a href="./a-complete-guide-to-cycling-in-india" class="read-more">Read More</a>
+        </article>
     <!-- PAGINATION -->
     <!-- <div class="pagination">
         <a href="#" class="prev">« Prev</a>
