--- a/a-complete-guide-to-cycling-in-india.html
+++ b/a-complete-guide-to-cycling-in-india.html
@@ -236,11 +236,11 @@
 
         <p class="sub-heading">Future of Cycling in India: Trends and Opportunities</p>
         <ul>
-            <li><strong>Trends:</strong> Growing popularity of electric bikes and cycling tourism.</li>
+            <li><strong>Trends:</strong> Growing popularity of electric cycles and cycling tourism.</li>
             <li><strong>Opportunities:</strong> Development of cycling infrastructure and increased awareness.</li>
         </ul>
 
-        <p class="sub-heading">Conclusion: Why Cycling in India is an Experience Like No Other</p>
+        <p class="sub-heading">Conclusion</p>
         <p>Cycling in India is an adventure waiting to be explored. From the bustling streets of Delhi to the serene trails of Kerala, every ride offers a unique experience. Whether you’re cycling for fitness, fun, or the environment, India’s diverse landscapes and growing cycling culture have something for everyone. So, grab your bike, hit the road, and join the cycling revolution!</p>
     </div>
 </section>
