--- a/spotlight.html
+++ b/spotlight.html
@@ -153,6 +153,12 @@
             <p>A Complete Guide to Cycling in India</p>
             <a href="./a-complete-guide-to-cycling-in-india" class="read-more">Read More</a>
         </article>
+         </article>
+          <article class="blog-post">
+            <img src="18.jpg" alt="Blog Image">
+            <p>Best Seasons and Weather Conditions for Cycling in India</p>
+            <a href="./best-seasons-and-weather-conditions-for-cycling-in-India" class="read-more">Read More</a>
+        </article>
     <!-- PAGINATION -->
     <!-- <div class="pagination">
         <a href="#" class="prev">« Prev</a>
