--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
    <div class="desktop-nav">
         <div class="nav-links">
             <a href="./">HOME</a>
-            <a href="./experience">EXPERIENCE</a>
-            <a href="./product">PRODUCT</a>
+<!--             <a href="./experience">EXPERIENCE</a>
+            <a href="./product">PRODUCT</a> -->
             <a href="./spotlight">SPOTLIGHT</a>
             <a href="./community">CLUB</a>
             <a href="./contact">CONTACT</a>
