--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,8 @@
     <div class="sidebar">
         <div class="sidebar-content">
             <div class="sidebar-item"><a href="./">HOME</a></div>
-            <div class="sidebar-item"><a href="./experience">EXPERIENCE</a></div>
-            <div class="sidebar-item"><a href="./product">PRODUCT</a></div>
+<!--             <div class="sidebar-item"><a href="./experience">EXPERIENCE</a></div>
+            <div class="sidebar-item"><a href="./product">PRODUCT</a></div> -->
             <div class="sidebar-item"><a href="./spotlight">SPOTLIGHT</a></div>
             <div class="sidebar-item"><a href="./community">CLUB</a></div>
             <div class="sidebar-item"><a href="./contact">CONTACT</a></div>
