--- a/spotlight.html
+++ b/spotlight.html
@@ -159,6 +159,12 @@
             <p>Best Seasons and Weather Conditions for Cycling in India</p>
             <a href="./best-seasons-and-weather-conditions-for-cycling-in-India" class="read-more">Read More</a>
         </article>
+         </article>
+          <article class="blog-post">
+            <img src="19.jpg" alt="Blog Image">
+            <p>What happens if the Prime Minister of India starts Cycling?</p>
+            <a href="./what-happens-if-the-Prime-Minister-of-India-starts-cycling.html" class="read-more">Read More</a>
+        </article>
     <!-- PAGINATION -->
     <!-- <div class="pagination">
         <a href="#" class="prev">« Prev</a>
