--- a/spotlight.html
+++ b/spotlight.html
@@ -62,7 +62,7 @@
           <article class="blog-post">
             <img src="19.jpg" alt="Blog Image">
             <p>What happens if the Prime Minister of India starts Cycling?</p>
-            <a href="./what-happens-if-the-Prime-Minister-of-India-starts-cycling.html" class="read-more">Read More</a>
+            <a href="./what-happens-if-the-Prime-Minister-of-India-starts-cycling" class="read-more">Read More</a>
         </article>
         <article class="blog-post">
             <img src="01.jpg" alt="Blog Image">
