--- a/spotlight.html
+++ b/spotlight.html
@@ -58,7 +58,11 @@
     <!-- BLOG POSTS SECTION -->
     <section class="blog-container">
         <!-- 50 blog posts -->
-          </article>
+           <article class="blog-post">
+            <img src="20.jpg" alt="Blog Image">
+            <p>Why 'Cycle with PM' could be more impactful than 'Mann Ki Baat'p>
+            <a href="./why-cycle-with-PM-could-be-more-impactful-than-mann-ki-baat" class="read-more">Read More</a>
+        </article>
           <article class="blog-post">
             <img src="19.jpg" alt="Blog Image">
             <p>What happens if the Prime Minister of India starts Cycling?</p>
