--- a/spotlight.html
+++ b/spotlight.html
@@ -61,7 +61,7 @@
         </article>
         <article class="blog-post">
             <img src="20.jpg" alt="Blog Image">
-            <p>Why 'Cycle with PM' could be more impactful than 'Mann Ki Baat'p>
+            <p>Why 'Cycle with PM' could be more impactful than 'Mann Ki Baat'</p>
             <a href="./why-cycle-with-PM-could-be-more-impactful-than-mann-ki-baat" class="read-more">Read More</a>
         </article>
           <article class="blog-post">
