--- a/why-cycle-with-PM-could-be-more-impactful-than-mann-ki-baat.html
+++ b/why-cycle-with-PM-could-be-more-impactful-than-mann-ki-baat.html
@@ -15,8 +15,8 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Why 'Cycle with PM' Could Be More Impactful Than 'Mann Ki Baat'" />
     <meta property="og:description" content="Imagine a future where the Prime Minister leads by example, cycling for a healthier, greener, and more connected India." />
-    <meta property="og:image" content="20.jpg" />
-    <meta property="og:url" content="https://www.cycleculture.in/why-cycle-with-PM-could-be-more-impactful-than-mann-ki-baat.html" />
+    <meta property="og:image" content="https://cycleculture.in/path-to-your-image/20.jpg">
+    <meta property="og:url" content="https://cycleculture.in/why-cycle-with-PM-could-be-more-impactful-than-mann-ki-baat.html">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
