--- a/spotlight.html
+++ b/spotlight.html
@@ -58,6 +58,11 @@
     <!-- BLOG POSTS SECTION -->
     <section class="blog-container">
         <!-- 50 blog posts -->
+           <article class="blog-post">
+            <img src="21.jpg" alt="Blog Image">
+            <p>India’s 7.3 hour screen problem. Can cycling be the answer?</p>
+            <a href="./India’s-7.3-hour-screen-problem-Can-cycling-be-the-answer?.html" class="read-more">Read More</a>
+        </article>
         <article class="blog-post">
             <img src="20.jpg" alt="Blog Image">
             <p>Why 'Cycle with PM' could be more impactful than 'Mann Ki Baat'</p>
