--- a/spotlight.html
+++ b/spotlight.html
@@ -61,7 +61,7 @@
            <article class="blog-post">
             <img src="21.jpg" alt="Blog Image">
             <p>India’s 7.3 hour screen problem. Can cycling be the answer?</p>
-            <a href="./India’s-7.3-hour-screen-problem-Can-cycling-be-the-answer?.html" class="read-more">Read More</a>
+            <a href="./India’s-7.3-hour-screen-problem-Can-cycling-be-the-answer?" class="read-more">Read More</a>
         </article>
         <article class="blog-post">
             <img src="20.jpg" alt="Blog Image">
