--- a/spotlight.html
+++ b/spotlight.html
@@ -23,12 +23,12 @@
 
 
 
-    <!-- Top Navigation Bar for Desktop -->
-     <div class="desktop-nav">
+  <!-- Top Navigation Bar for Desktop -->
+    <div class="desktop-nav">
         <div class="nav-links">
             <a href="./">HOME</a>
-<!--             <a href="./experience">EXPERIENCE</a>
-            <a href="./product">PRODUCT</a> -->
+<!--             <a href="./experience">EXPERIENCE</a> -->
+            <a href="./event">EVENT</a>
             <a href="./spotlight">SPOTLIGHT</a>
             <a href="./community">CLUB</a>
             <a href="./contact">CONTACT</a>
@@ -41,8 +41,8 @@
     <div class="sidebar">
         <div class="sidebar-content">
             <div class="sidebar-item"><a href="./">HOME</a></div>
-<!--             <div class="sidebar-item"><a href="./experience">EXPERIENCE</a></div>
-            <div class="sidebar-item"><a href="./product">PRODUCT</a></div> -->
+<!--             <div class="sidebar-item"><a href="./experience">EXPERIENCE</a></div> -->
+            <div class="sidebar-item"><a href="./event">EVENT</a></div>
             <div class="sidebar-item"><a href="./spotlight">SPOTLIGHT</a></div>
             <div class="sidebar-item"><a href="./community">CLUB</a></div>
             <div class="sidebar-item"><a href="./contact">CONTACT</a></div>
