--- a/event.html
+++ b/event.html
@@ -56,24 +56,9 @@
             <h3>Ramazan Special Night Ride 2025</h3>
             <p><strong>Date:</strong> March 22, 2025</p>
             <p><strong>Location:</strong> Hyderabad</p>
-            <a href="hyderabadevent.html" class="event-button">Know More</a>
+            <a href="./hyderabadevent" class="event-button">Know More</a>
         </article>
 
-        <article class="event-card">
-            <img src="03.jpg" alt="Event Image">
-            <h3>Summer Festival</h3>
-            <p><strong>Date:</strong> July 10, 2025</p>
-            <p><strong>Location:</strong> Los Angeles, USA</p>
-            <a href="bangaloreevent.html" class="event-button">Know More</a>
-        </article>
-
-        <article class="event-card">
-            <img src="02.jpg" alt="Event Image">
-            <h3>Music Fiesta</h3>
-            <p><strong>Date:</strong> August 5, 2025</p>
-            <p><strong>Location:</strong> London, UK</p>
-            <a href="bangaloreevent.html" class="event-button">Know More</a>
-        </article>
     </section>
 
     <script src="script.js"></script> <!-- Link to your JavaScript file -->
