--- a/hyderabadevent.html
+++ b/hyderabadevent.html
@@ -59,6 +59,14 @@
 
     </section>
 
+    <!-- Contact Details -->
+<div class="contact-info">
+    <strong>Contact:</strong> Ravi: <a href="tel:+919701744814">+91 97017 44814</a> | 
+    Anjani: <a href="tel:+917981323170">+91 79813 23170</a> | 
+    Host - Haseeb: <a href="tel:+917993985533">+91 79939 85533</a>
+</div>
+
+
     <script src="escript.js"></script>
     <script src="script.js"></script>
 
