--- a/event.html
+++ b/event.html
@@ -58,6 +58,13 @@
             <p><strong>Location:</strong> Hyderabad</p>
             <a href="./hyderabadevent" class="event-button">Know More</a>
         </article>
+    <article class="event-card">
+        <img src="bhopalevent.jpg" alt="Bhopal Cycling Event">
+        <h3>GRC 2025 - Bhopal Cycling Event</h3>
+        <p><strong>Date:</strong> March 23, 2025</p>
+        <p><strong>Location:</strong> Bhopal</p>
+        <a href="./bhopalevent" class="event-button">Know More</a>
+</article>
 
     </section>
 
