--- a/event.html
+++ b/event.html
@@ -56,6 +56,7 @@
             <h3>Ramazan Special Night Ride 2025</h3>
             <p><strong>Date:</strong> March 22, 2025</p>
             <p><strong>Location:</strong> Hyderabad</p>
+            <p><strong>Entry:</strong> Free</p>
             <a href="./hyderabadevent" class="event-button">Know More</a>
         </article>
     <article class="event-card">
@@ -63,6 +64,7 @@
         <h3>GRC 2025 - Bhopal Cycling Event</h3>
         <p><strong>Date:</strong> March 23, 2025</p>
         <p><strong>Location:</strong> Bhopal</p>
+        <p><strong>Entry:</strong> Free</p>
         <a href="./bhopalevent" class="event-button">Know More</a>
 </article>
 
