--- a/hyderabadevent.html
+++ b/hyderabadevent.html
@@ -35,6 +35,7 @@
             <p><strong>Date & Time:</strong> March 22, 2025 | 9:00 PM</p>
             <p><strong>Start Point:</strong> Telangana Secretariat</p>
             <p><strong>Finish Line:</strong> Durgam Cheruvu</p>
+            <p><strong>Entry:</strong> Free</p>
             
             <h2 class="event-subheading">About the Event</h2>
             <p>
