--- a/bhopalevent.html
+++ b/bhopalevent.html
@@ -33,6 +33,7 @@
             <p><strong>Date:</strong> 23rd March 2025</p>
             <p><strong>Time:</strong> 5:30 AM</p>
             <p><strong>Distance:</strong> 40 KMs</p>
+            <p><strong>Entry:</strong> Free</p>
 
             <h2 class="event-subheading">Route Details</h2>
             <ul>
