--- a/bhopalevent.html
+++ b/bhopalevent.html
@@ -10,6 +10,18 @@
     <meta name="author" content="GRC 2025">
 
     <link rel="stylesheet" href="style.css">
+      <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="favicon.ico" type="icon">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-56YGC2V2YG');
+    </script>
 </head>
 <body class="event-page-body">
 
@@ -51,6 +63,6 @@
         </div>
 
     </section>
-
+<script src="script.js"></script> 
 </body>
 </html>
