--- a/hyderabadevent.html
+++ b/hyderabadevent.html
@@ -10,7 +10,18 @@
     <meta name="author" content="Hyderabad Cycling Revolution">
 
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="favicon.ico" type="icon">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-56YGC2V2YG');
+    </script>
 </head>
 <body class="event-page-body">
 
@@ -66,9 +77,6 @@
     Anjani: <a href="tel:+917981323170">+91 79813 23170</a> | 
     Host - Haseeb: <a href="tel:+917993985533">+91 79939 85533</a>
 </div>
-
-
-    <script src="escript.js"></script>
     <script src="script.js"></script>
 
 </body>
