--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Cycle Culture</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Book the best cycle tours in India with Cycle Culture! Enjoy scenic rides, custom tours, and unforgettable cycling experiences on your next holiday. Adventure awaits.">
+    <meta name="description" content="Spotlighting India's cycling culture! Read blogs, discover clubs, and connect with riders near you. #LetsTakeARideToday">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
