--- a/spotlight.html
+++ b/spotlight.html
@@ -53,12 +53,17 @@
 
 
 
-
+the-complete-guide-to-choosing-the-right-cycle-for-your-needs.html
 
     <!-- BLOG POSTS SECTION -->
     <section class="blog-container">
         <!-- 50 blog posts -->
-           <article class="blog-post">
+        <article class="blog-post">
+            <img src="22.jpg" alt="Blog Image">
+            <p>The complete guide to choosing the right cycle for your needs</p>
+            <a href="./the-complete-guide-to-choosing-the-right-cycle-for-your-needs.html" class="read-more">Read More</a>
+        </article>   
+        <article class="blog-post">
             <img src="21.jpg" alt="Blog Image">
             <p>India’s 7.3 hour screen problem. Can cycling be the answer?</p>
             <a href="./Indias-7.3-hour-screen-problem-Can-cycling-be-the-answer" class="read-more">Read More</a>
