--- a/the-complete-guide-to-choosing-the-right-cycle-for-your-needs.html
+++ b/the-complete-guide-to-choosing-the-right-cycle-for-your-needs.html
@@ -25,6 +25,24 @@
         gtag('js', new Date());
         gtag('config', 'G-56YGC2V2YG');
     </script>
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "The complete guide to choosing the right cycle for your needs",
+  "url": "https://www.cycleculture.in/complete-guide-to-choosing-cycles.html",
+  "image": "https://www.cycleculture.in/22.jpg",
+  "datePublished": "2025-03-25",
+  "author": {"@type": "Organization", "name": "Cycle Culture"},
+  "publisher": {
+    "@type": "Organization",
+    "name": "Cycle Culture",
+    "logo": {"@type": "ImageObject", "url": "https://www.cycleculture.in/favicon.ico"}
+  }
+}
+</script>
+    
 </head>
 <body class="postdetail-body">
 
