--- a/the-complete-guide-to-choosing-the-right-cycle-for-your-needs.html
+++ b/the-complete-guide-to-choosing-the-right-cycle-for-your-needs.html
@@ -38,7 +38,7 @@
   "publisher": {
     "@type": "Organization",
     "name": "Cycle Culture",
-    "logo": {"@type": "ImageObject", "url": "https://www.cycleculture.in/favicon.ico"}
+    "logo": {"@type": "ImageObject", "url": "https://www.cycleculture.in/favicon.ic"}
   }
 }
 </script>
