--- a/spotlight.html
+++ b/spotlight.html
@@ -59,9 +59,15 @@ the-complete-guide-to-choosing-the-right-cycle-for-your-needs.html
     <section class="blog-container">
         <!-- 50 blog posts -->
         <article class="blog-post">
+            <img src="23.jpg" alt="Blog Image">
+            <p>Why every woman should grab a cycle</p>
+            <a href="./why-every-woman-should-grab-a-cycle" class="read-more">Read More</a>
+        </article>   
+        
+        <article class="blog-post">
             <img src="22.jpg" alt="Blog Image">
             <p>The complete guide to choosing the right cycle for your needs</p>
-            <a href="./the-complete-guide-to-choosing-the-right-cycle-for-your-needs.html" class="read-more">Read More</a>
+            <a href="./the-complete-guide-to-choosing-the-right-cycle-for-your-needs" class="read-more">Read More</a>
         </article>   
         <article class="blog-post">
             <img src="21.jpg" alt="Blog Image">
