--- a/spotlight.html
+++ b/spotlight.html
@@ -53,11 +53,17 @@
 
 
 
-the-complete-guide-to-choosing-the-right-cycle-for-your-needs.html
 
     <!-- BLOG POSTS SECTION -->
     <section class="blog-container">
         <!-- 50 blog posts -->
+        <article class="blog-post">
+            <img src="24.jpg" alt="Blog Image">
+            <p>India’s best hill stations for cycling adventures</p>
+            <a href="./Indias-best-hill-stations-for-cycling-adventures" class="read-more">Read More</a>
+        </article>   
+
+        
         <article class="blog-post">
             <img src="23.jpg" alt="Blog Image">
             <p>Why every woman should grab a cycle</p>
