--- a/Indias-best-hill-stations-for-cycling-adventures.html
+++ b/Indias-best-hill-stations-for-cycling-adventures.html
@@ -24,6 +24,26 @@
         gtag('js', new Date());
         gtag('config', 'G-56YGC2V2YG');
     </script>
+
+    
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "India’s best hill stations for cycling adventures",
+  "url": "https://www.cycleculture.in/Indias-best-hill-stations-for-cycling-adventures.html",
+  "image": "https://www.cycleculture.in/24.jpg",
+  "datePublished": "2025-04-03",
+  "author": {"@type": "Organization", "name": "Cycle Culture"},
+  "publisher": {
+    "@type": "Organization",
+    "name": "Cycle Culture",
+    "logo": {"@type": "ImageObject", "url": "https://www.cycleculture.in/favicon.ico"}
+  }
+}
+</script>
+
+    
 </head>
 <body class="postdetail-body">
 
