--- a/spotlight.html
+++ b/spotlight.html
@@ -57,6 +57,14 @@
     <!-- BLOG POSTS SECTION -->
     <section class="blog-container">
         <!-- 50 blog posts -->
+
+         <article class="blog-post">
+            <img src="25.jpg" alt="Blog Image">
+            <p>How to make 10km cycling your daily habit without spending a fortune</p>
+            <a href="./how-to-make-10km-cycling-your-daily-habit-without-spending-a-fortune" class="read-more">Read More</a>
+        </article>  
+
+        
         <article class="blog-post">
             <img src="24.jpg" alt="Blog Image">
             <p>India’s best hill stations for cycling adventures</p>
