--- a/event.html
+++ b/event.html
@@ -51,6 +51,16 @@
     <!-- Event Listing Section -->
     <section class="event-container">
         <!-- Event Card -->
+
+          <article class="event-card">
+            <img src="dapolievent.jpg" alt="Event Image">
+            <h3>Dapoli Summer Cyclothon</h3>
+            <p><strong>Date:</strong> May 11-12, 2025</p>
+            <p><strong>Location:</strong> Dapoli, Ratnagiri, Maharastra</p>
+            <p><strong>Entry:</strong> Paid/Free</p>
+            <a href="./dapolievent" class="event-button">Know More</a>
+        </article>
+        
         <article class="event-card">
             <img src="hyderabadevent.jpg" alt="Event Image">
             <h3>Ramazan Special Night Ride 2025</h3>
