--- a/dapolievent.html
+++ b/dapolievent.html
@@ -116,11 +116,17 @@
 
             <h2 class="event-subheading">Contact Information</h2>
             <ul class="contact-list">
-                <li>Ambarish: <a href="tel:+918655874486">8655874486</a></li>
-                <li>Prashant: <a href="tel:+918767285827">8767285827</a></li>
-                <li>Rajeshkumar: <a href="tel:+919028741595">9028741595</a></li>
+                <li> <a href="tel:"></a></li>
+                <li></li>
+                <li></li>
             </ul>
         </div>
+
+        <div class="contact-info">
+    <strong>Contact:</strong> Ambarish: <a href="tel:+918655874486">+91 8655874486</a> | 
+    Prashant: <a href="tel:+918767285827">8767285827</a> | 
+    Rajeshkumar: <a href="tel:+919028741595">9028741595</a>
+</div>
 
     </section>
 <script src="script.js"></script> 
