--- a/event.html
+++ b/event.html
@@ -52,6 +52,17 @@
     <section class="event-container">
         <!-- Event Card -->
 
+
+        <article class="event-card">
+            <img src="jammuevent.jpg" alt="Trikuta Trail Blazer 200km endurance cycling challenge">
+            <h3>Trikuta Trail Blazer</h3>
+            <p><strong>Date:</strong> April 27, 2025</p>
+            <p><strong>Location:</strong> ITI College, Akhnoor Road, Jammu</p>
+            <p><strong>Distance:</strong> 200km Endurance Challenge</p>
+            <a href="./jammuevent" class="event-button">Take the Challenge</a>
+        </article>
+
+        
           <article class="event-card">
             <img src="dapolievent.jpg" alt="Event Image">
             <h3>Dapoli Summer Cyclothon</h3>
