--- a/spotlight.html
+++ b/spotlight.html
@@ -59,6 +59,12 @@
         <!-- 50 blog posts -->
 
          <article class="blog-post">
+            <img src="26.jpg" alt="Blog Image">
+            <p>Mumbai's midnight cycling revolution</p>
+            <a href="./mumbai-midnight-cycling-revolution" class="read-more">Read More</a>
+        </article>  
+
+         <article class="blog-post">
             <img src="25.jpg" alt="Blog Image">
             <p>How to make 10km cycling your daily habit without spending a fortune</p>
             <a href="./how-to-make-10km-cycling-your-daily-habit-without-spending-a-fortune" class="read-more">Read More</a>
