--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                 <img src="images/cycleculturelogo.jpg" alt="Cycle Culture Logo">
             </div>
             <div class="nav-links">
-                <a href="#home" class="active">Home</a>
+                <a href="./" class="active">Home</a>
                 <a href="#spotlight">Spotlight</a>
                 <a href="#experiences">Experiences</a>
                 <a href="#events">Events</a>
                 <a href="#clubs">Clubs</a>
-                <a href="#contact">Contact</a>
+                <a href="contact.html">Contact</a>
             </div>
             <button class="mobile-menu-btn" aria-label="Toggle menu">☰</button>
         </div>
