--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
     </nav>
 
     <!-- Contact Section -->
-    <section class="fullscreen-section contact center-align" style="background-image: url('images/06.jpg')">
+    <section class="fullscreen-section contact center-align" style="background-image: url('images/connect-cycling.jpg')">
         <div class="section-content active">
             <h2>Connect with us</h2>
             <span class="section-subtitle">Join the cycling revolution</span>
