--- a/contact.html
+++ b/contact.html
@@ -19,12 +19,8 @@
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/images/favicon.ico/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/images/favicon.ico/favicon.svg" />
-    <link rel="shortcut icon" href="/images/favicon.ico/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon.ico/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Cycle Culture" />
-    <link rel="manifest" href="/images/favicon.ico/site.webmanifest" />
+    <link rel="icon" href="images/favicon.ico" type="icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
     <!-- Styles & Fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
