--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="description" content="Experience India's most breathtaking cycling adventures">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://cycleculture.in/" />
+    <link rel="icon" href="images/favicon.ico" type="icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    
 
     <!-- Preload & Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,12 +21,7 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Glacial+Indifference:wght@400;700&display=swap" as="style">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style">
 
-    <link rel="icon" type="image/png" href="/images/favicon.ico/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/images/favicon.ico/favicon.svg" />
-    <link rel="shortcut icon" href="/images/favicon.ico/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon.ico/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Cycle Culture" />
-    <link rel="manifest" href="/images/favicon.ico/site.webmanifest" />
+
     <!-- Styles & Fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference:wght@400;700&display=swap" rel="stylesheet">
